# learning-rust

./: Cargo.toml  Macros.md  README.md  singleton_pattern.rs
basics/: array.rs  ch3_common_concepts.rs  ch3_controlstatements.rs  conditions.rs  data_types.rs  func.rs  variables.rs  while.rs
datatypes/: Vec.rs
design-patterns/: adaptor_pattern.rs  builder_pattern.rs  command_pattern.rs  decorator_pattern.rs  factory_pattern.rs  observer_pattern.rs  prototype_pattern.rs  state_pattern.rs  strategy_pattern.rs
examples/: README.md  ch10_modules_modifier.rs  ch10_modules_nested.rs  ch10_modules_public_modifier.rs  ch11_use_library_crate.rs  ch2_guessing_game.rs  ch3_datatypes.rs  ch3_functions.rs  ch5_structs.rs  ch5_structs_method.rs  ch5_structs_tuple.rs  ch9_error_handling_panic.rs  ch9_error_handling_result.rs  ch9_error_handling_result_propagate_shortcut.rs  ch9_error_handling_unwrap.rs
examples/basics/: for.rs  loops.rs  tuples.rs
quick_notes/: borrowed_view.md  cfg_and_platform.md  enum.md  hashmap.md  is_err.md  map.md  return_vs_expression.md  toolchain.md
src/: main.rs
utils/src/: greet.rs  lib.rs  math.rs
